Align place name correctly and set box size

--- a/web_flask/static/styles/8-places.css
+++ b/web_flask/static/styles/8-places.css
@@ -16,6 +16,7 @@
     margin: 20px;
     border: 1px solid #FF5A5F;
     border-radius: 4px;
+    height: fit-content;
 }
 .places h2 {
 	font-size: 30px;
@@ -30,7 +31,8 @@
 
 .title_box h2 {
     text-align: center;
-    margin: 25px 0px 40px 30%;
+/*    margin: 25px 0px 40px 30%; */
+    margin: 25px 0px;
 }
 .price_by_night {
     display: flex;
